chore: commit hosting-ready app changes